# yahoo-finance-rust-cli

./: Cargo.toml  README.md  docker-compose.yaml
.github/workflows/: rust.yml
proto/: yahoo.proto
src/: influxdb.rs  main.rs  portfolio.rs  quote_producer.rs  quote_receiver.rs  yahoo_api.rs  yahoo_protobuf.rs
